<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#1fc0e9"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="11pt"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/wb_webview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        android:id="@+id/txt_user"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_username"
                        android:textColor="@android:color/white"
                        android:textSize="8pt"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_user"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_email"
                        android:textColor="@android:color/white"
                        android:textSize="8pt"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_phone"
                        android:textColor="@android:color/white"
                        android:textSize="8pt"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_birthday"
                        android:textColor="@android:color/white"
                        android:textSize="8pt"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_birthday"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/base_button_blue" >

                    <TextView                        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_send"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>